--- a/styles.css
+++ b/styles.css
@@ -318,3 +318,18 @@ textarea {
     display: flex;
     flex-direction: column;
 }
+
+.picturesheader {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    padding: 10px;
+}
+
+.picturesheader h1{
+    font-family: sans-serif;
+    font-size: 50px;
+    color: #272838;
+    margin: auto;
+    padding: 10px;
+}
